--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-appwrite": "^0.2.2",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.16.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.3",
     "typescript": "^5.3.0"
   },
